--- a/src/Frontend/HomeFinance/gradle/libs.versions.toml
+++ b/src/Frontend/HomeFinance/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ coroutines = "1.7.2"
 lifecycleViewModelCompose = "2.6.1"
 runtimeLivedata = "1.7.8"
 navigationCompose = "2.8.9"
+icons = "1.6.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +43,7 @@ lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-
 lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose"}
+material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icons"}
 
 
 [plugins]
