Actualizacion de navegacion e inclucion de barra de navegacion, creacion de archivos de pantallas necesarios y modelos para controlar navegacion

--- a/src/Frontend/HomeFinance/gradle/libs.versions.toml
+++ b/src/Frontend/HomeFinance/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.1"
+agp = "8.6.1"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -16,6 +16,7 @@ coroutines = "1.7.2"
 lifecycleViewModelCompose = "2.6.1"
 runtimeLivedata = "1.7.8"
 navigationCompose = "2.8.9"
+kotlinSerialization = "1.8.0"
 icons = "1.6.8"
 
 [libraries]
@@ -43,6 +44,7 @@ lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-
 lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose"}
+kotlinx-serialization-json-jvm = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json-jvm", version.ref = "kotlinSerialization"}
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icons"}
 
 
@@ -50,4 +52,4 @@ material-icons-extended = { group = "androidx.compose.material", name = "materia
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+jetbrainsKotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
