mejoras a pantallas y actualizacion de propiedades del api

--- a/src/Backend/HomeFinances/src/main/resources/application.properties
+++ b/src/Backend/HomeFinances/src/main/resources/application.properties
@@ -11,3 +11,17 @@ spring.jpa.show-sql=true
 
 # Configuración del servidor
 server.port=8081
+
+# Tiempo máximo de vida de una conexión (4 minutos)
+spring.datasource.hikari.max-lifetime=240000
+
+# Validación de conexión
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.test-while-idle=true
+
+# Tiempo máximo de espera para obtener una conexión
+spring.datasource.hikari.connection-timeout=30000
+
+# Tamaño máximo del pool (ajústalo según tu carga)
+spring.datasource.hikari.maximum-pool-size=10
